third_party/move/move-compiler-v2/tests/reference-safety/bug_14096.exp

Diagnostics:
error: mutable reference in local `x` requires exclusive access but is borrowed
  ┌─ tests/reference-safety/bug_14096.move:6:20
  │
6 │         (copy x == copy x);
  │         -----------^^^^^^-
  │         │          │
  │         │          requirement enforced here
  │         conflicting reference used here

error: same mutable reference in value is also used in other value in argument list
  ┌─ tests/reference-safety/bug_14096.move:6:9
  │
5 │         let x = &mut 0u8;
  │                 -------- previous mutable local borrow
6 │         (copy x == copy x);
  │         ^^^^^^^^^^^^^^^^^^ requirement enforced here
